# morse

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: consts.h  decode.h  encode.h  flags.h  morse_table.h  read.h  utils.h
resources/: morse_table.csv  programmer-info.json
src/: consts.c  decode.c  encode.c  flags.c  main.c  read.c  utils.c
